tests/errors/test_38.x
// Char expr greater than one character;

fn main() -> void {

    let x: i8 = 'ab';
}